--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,11 @@ ipykernel==6.4.1
 ipython==7.28.0
 ipython-genutils==0.2.0
 jedi==0.18.0
+Jinja2==3.0.2
 jupyter-client==7.0.6
 jupyter-core==4.8.1
 kiwisolver==1.3.2
+MarkupSafe==2.0.1
 matplotlib==3.4.3
 matplotlib-inline==0.1.3
 nest-asyncio==1.5.1
